fix: 100vh div fix on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   justify-content: space-between;
   display: flex;
